--- a/src/Home.css
+++ b/src/Home.css
@@ -2,8 +2,8 @@
 BACKGROUND
 */
 .background {
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -11,17 +11,18 @@ BACKGROUND
     right: 0;
     z-index: -1;
     background-color: white;
+
   }
   
   .orbits {
-    transform: translate(20rem, 30rem)
+    transform: translate(280px, 550px);
   }
 
   .outer-orbit {
     position: absolute;
     transform: translate(-50%, -50%) rotate(322deg);
-    width: 50rem;
-    height: 70rem;
+    width: 750px;
+    height: 1100px;
     border-radius: 50%;
     border: 1px solid #e0e0e0;
   }
@@ -29,10 +30,37 @@ BACKGROUND
   .inner-orbit {
     position: absolute;
     transform: translate(-50%, -50%) rotate(322deg);
-    width: 30rem;
-    height: 50rem;
+    width: 500px;
+    height: 850px;
     border-radius: 50%;
     border: 1px solid #e0e0e0;
+  }
+
+  .saturn {
+    transform: translate(1150px, 350px)
+  }
+
+  .saturn-body {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    border: 1px solid #e0e0e0;
+  }
+  
+  .saturn-rings {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(126.47deg);
+    width: 700px;
+    height: 120px;
+    border-radius: 50%;
+    border: 1px solid #e0e0e0;
+    box-sizing: border-box;
   }
 
 
@@ -54,8 +82,8 @@ HOME PAGE
   }
 
 .home-headers {
-    padding-top: 1rem;
-    padding-left: 5rem;
+    padding-top: 5rem;
+    padding-left: 8rem;
   }
   
 .main-header {
