--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -33,3 +33,22 @@
   
     margin-top: -4rem;
   }
+
+  .socials {
+    display: flex;
+    justify-content: left;
+  }
+  
+  .socials a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1.5em;
+    height: 1.5em;
+    margin: 0 10px;
+  }
+  
+  .linkedin, .github, .instagram {
+    width: 100%;
+    height: 100%;
+  }
