--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   right: 0;
   z-index: -1;
   background-color: white;
-
 }
 
 .orbits {
@@ -24,6 +23,7 @@
   border: 1px solid #e0e0e0;
 }
 
+
 .inner-orbit {
   position: absolute;
   transform: translate(-50%, -50%) rotate(322deg);
@@ -37,25 +37,42 @@
   transform: translate(1150px, 350px)
 }
 
+
 .saturn-body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 400px;
-  height: 400px;
+  transform: translate(-50%, -50%) rotate(322deg);
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
   border: 1px solid #e0e0e0;
+  background-color: transparent;
+  background-image: linear-gradient(to bottom, #fff 50%, transparent 0);
+
 }
 
-.saturn-rings {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(126.47deg);
-  width: 700px;
-  height: 120px;
+.saturn-holder {
+  width: 600px;
+  height: 160px;
+  transform: translate(-250px, -90px) rotate(322deg);
+  fill: white;
+  stroke: #e0e0e0;
+  stroke-width: 1;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 2000;
+  animation: rotate 10s linear infinite;
+  animation-iteration-count: infinite;
+}
+
+.saturn-ring {
   border-radius: 50%;
   border: 1px solid #e0e0e0;
-  box-sizing: border-box;
+  transform: translate(300px, 80px)
+}
+
+@keyframes rotate {
+  to {
+    stroke-dashoffset: 0;
+  }
 }
