--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,11 +1,23 @@
 @font-face {
-    font-family: 'Muli';
+    font-family: 'Circular Std Bold';
     font-weight: bold;
-    src: url('/Users/juanlucasumali/Desktop/personal website/website/public/fonts/muli/Muli-Bold.ttf') format('truetype');
+    src: url('/Users/juanlucasumali/Desktop/personal website/website/public/fonts/circular-std-font-family/CircularStd-Bold.ttf') format('truetype');
   }
-  
+
+  @font-face {
+    font-family: 'Circular Std Book';
+    font-weight: bold;
+    src: url('/Users/juanlucasumali/Desktop/personal website/website/public/fonts/circular-std-font-family/CircularStd-Book.ttf') format('truetype');
+  }
+
+  .home-page {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+  }
+
   .home-headers {
-    padding-top: 5rem;
+    margin-top: -4rem;
     padding-left: 8rem;
   }
   
@@ -14,7 +26,7 @@
     align-items: center;
   
     font-size: 5rem;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Circular Std Bold', sans-serif;
     font-weight: bold;
   }
   
@@ -29,9 +41,9 @@
   
   .sub-header {
     font-size: 1.5rem;
-    font-family: 'Muli', sans-serif;
-  
-    margin-top: -4rem;
+    font-family: 'Circular Std Book', sans-serif;
+
+    margin-top: -3.5rem;
   }
 
   .socials {
@@ -46,6 +58,7 @@
     width: 1.5em;
     height: 1.5em;
     margin: 0 10px;
+
   }
   
   .linkedin, .github, .instagram {
