--- a/src/components/ProjectsCard.css
+++ b/src/components/ProjectsCard.css
@@ -13,6 +13,9 @@
 
 .MuiPaper-root {
     /* padding: 10px; */
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
   }
 
 .box-headers {
@@ -21,4 +24,9 @@
     flex-direction: column;
     /* margin-top: -60px;
     transform: translateY(50px); */
+}
+
+.projects-box-header {
+  text-align: center;
+  padding: 30px;
 }
