--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,13 +1,13 @@
   @font-face {
     font-family: 'Circular Std Bold';
     font-weight: bold;
-    src: url('/Users/juanlucasumali/Desktop/personal website/website/public/fonts/circular-std-font-family/CircularStd-Bold.ttf') format('truetype');
+    src: url('/Users/juanlucasumali/Desktop/personal_website/website/public/fonts/circular-std-font-family/CircularStd-Bold.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Circular Std Book';
     font-weight: bold;
-    src: url('/Users/juanlucasumali/Desktop/personal website/website/public/fonts/circular-std-font-family/CircularStd-Book.ttf') format('truetype');
+    src: url('/Users/juanlucasumali/Desktop/personal_website/website/public/fonts/circular-std-font-family/CircularStd-Book.ttf') format('truetype');
   }
   
   @keyframes fadeInUp {
